# fastapi-microservice-template

./: .env.example  LICENSE  README.md  compose.yml  main.py  pyproject.toml
app/: config.py  database.py  main.py
